--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -16,6 +16,8 @@ data:
   target_fps: 30
   window_size: 512  # frames per sample
   stride: 256  # sliding window stride
+  val_split: 0.2   # fraction of data for validation
+  test_split: 0.1  # fraction of data for held-out test
   min_segment_duration: 5  # minimum frames for valid segment
   tracking_cache_size: 2
   annotation_cache_size: 4
