--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -15,7 +15,7 @@ paths:
 data:
   target_fps: 30
   window_size: 512  # frames per sample
-  stride: 256  # sliding window stride
+  stride: 512  # sliding window stride
   val_split: 0.2   # fraction of data for validation
   test_split: 0  # fraction of data for held-out test
   enable_test_split: false  # When false, skip creating a held-out test split (train/val only)
@@ -30,9 +30,11 @@ data:
   rare_behaviors:  # Behaviors to oversample (test-relevant rare classes)
     - submit       # Only 86 training examples
     - chaseattack  # Only 57 training examples
-    - ejaculate
-    - intromit
-  oversample_factor: 10  # How many times to repeat rare behavior windows
+  oversample_factor: 3  # Reduced from 10 to save memory
+
+  # Shard cache settings for precomputed data (memory optimization)
+  shard_cache_size: 16  # Increased - cache more shards in RAM to reduce disk I/O
+  preload_shards: true  # Load ALL shards into RAM at startup (eliminates disk I/O during training)
 
   # Body parts (common across labs)
   core_body_parts:
@@ -138,7 +140,7 @@ model:
   mstcn:
     num_stages: 4
     num_layers: 10
-    num_f_maps: 64
+    num_f_maps: 128  # Increased from 64 to use more GPU
     kernel_size: 3
     dropout: 0.5
 
@@ -153,18 +155,19 @@ model:
 
 # Training settings
 training:
-  batch_size: 256
-  num_workers: 8
+  batch_size: 256  # Larger batch for 32GB VRAM + bigger model
+  num_workers: 2  # Small number of workers (pin_memory disabled on Windows)
   max_epochs: 1000
-  learning_rate: 0.001  # Scaled roughly linearly for 32x larger batch
-  weight_decay: 0.0003  # Extra regularization to offset low gradient noise at large batch
-  prefetch_factor: 8
+  learning_rate: 0.001  # Scaled for batch size 256
+  weight_decay: 0.0002
+  prefetch_factor: 4  # Prefetch batches per worker
+  # Note: Mixed precision (16-mixed) is enabled by default in train.py
 
   # Learning rate scheduler
   scheduler:
     name: cosine
-    warmup_epochs: 30  # More warmup epochs to match similar warmup steps with fewer steps/epoch
-    min_lr: 0.00032
+    warmup_epochs: 15  # Warmup for larger batch
+    min_lr: 0.00005
 
   # Loss weights
   loss:
@@ -181,7 +184,7 @@ training:
 
   # Early stopping
   early_stopping:
-    patience: 150  # More epochs to allow comparable update count with larger batches
+    patience: 50  # Adjusted for batch size 128
     monitor: val_segment_f1
     mode: max
 
